# python-kubernetes-tools

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python_kubernetes_tools/: deployment.py  main.py
python_kubernetes_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: main.py
