[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python_kubernetes_tools"
authors = [
    {name = "Luis Miguel Sáez"},
]
description = "https://github.com/luismiguelsaez/python-kubernetes-tools"
requires-python = ">=3.7"
keywords = ["kubernetes", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  'kubernetes>=27.2.0,<28.0.0',
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "python_kubernetes_tools.VERSION"}
readme = {file = ["README.md"]}
